welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:45: error: not found: value prendreBiscuit
prendreBiscuit();
^